new gitignore does not work
fix the thing that doesn't work

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/Assets/Tool/AssetBundles/stock
 **/animation_learn
 
 # This .gitignore file should be placed at the root of your Unity project directory
