--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.2d.animation": "5.0.10",
     "com.unity.cinemachine": "2.6.10",
     "com.unity.collab-proxy": "1.9.0",
     "com.unity.formats.fbx": "4.1.2",
